--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://telegram.org/js/telegram-web-app.js?58"></script>
 </head>
 <body>
     <h1 id="name">Telegram user info:</h1>
     <div id="info">
         Loading...
     </div>
-    <script> src="https://telegram.org/js/telegram-web-app.js"</script>
     <script>
         const tg=window.Telegram.WebApp;
         tg.ready()
